--- a/kubernetes/ci-rbac-secrets.yaml
+++ b/kubernetes/ci-rbac-secrets.yaml
@@ -1,17 +1,17 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: gha-monitoring-secrets
+  name: gha-monitoring-admin
   namespace: monitoring
 rules:
 - apiGroups: [""]
-  resources: ["secrets"]
-  verbs: ["get","list","watch","create","update","patch","delete"]
+  resources: ["secrets", "serviceaccounts"]
+  verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: gha-monitoring-secrets-rb
+  name: gha-monitoring-admin-rb
   namespace: monitoring
 subjects:
 - kind: Group
@@ -19,5 +19,5 @@ subjects:
   apiGroup: rbac.authorization.k8s.io
 roleRef:
   kind: Role
-  name: gha-monitoring-secrets
+  name: gha-monitoring-admin
   apiGroup: rbac.authorization.k8s.io
