--- a/kubernetes/ci-rbac-servicemonitor.yaml
+++ b/kubernetes/ci-rbac-servicemonitor.yaml
@@ -1,22 +1,23 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: ci-servicemonitor-reader
+  name: gha-servicemonitor-access
   namespace: prod
 rules:
-  - apiGroups: ["monitoring.coreos.com"]
-    resources: ["servicemonitors"]
-    verbs: ["get","list","watch","create","update","patch","delete"]
+- apiGroups: ["monitoring.coreos.com"]
+  resources: ["servicemonitors"]
+  verbs: ["get", "list", "create", "update", "patch", "delete"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: ci-servicemonitor-reader
+  name: gha-servicemonitor-access-rb
   namespace: prod
 subjects:
-  - kind: User
-    name: "arn:aws:iam::123456789012:role/gha-role"  
+- kind: Group
+  name: github:ci
+  apiGroup: rbac.authorization.k8s.io
 roleRef:
   kind: Role
-  name: ci-servicemonitor-reader
+  name: gha-servicemonitor-access
   apiGroup: rbac.authorization.k8s.io
