--- a/.github/workflows/predict_deploy_heal.yml
+++ b/.github/workflows/predict_deploy_heal.yml
@@ -126,14 +126,16 @@ jobs:
           kubectl -n "${EKS_NAMESPACE}" apply -f kubernetes/frontend-deploy.yaml
           kubectl -n "${EKS_NAMESPACE}" set image deployment/${FRONTEND_DEPLOY} ${FRONTEND_CONTAINER}="${FRONTEND_IMAGE}"
 
-
-      - name: Upgrade Prometheus Stack (with kube-state-metrics overrides)
+      - name: Helm Upgrade Prometheus
         run: |
-          helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
-          helm repo update
-          helm -n "${PROM_NAMESPACE}" upgrade prometheus prometheus-community/kube-prometheus-stack \
-            --reuse-values \
-            -f charts/kube-prom-stack-values.yaml
+         helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
+         helm repo update
+         helm upgrade prometheus prometheus-community/kube-prometheus-stack \
+         --reuse-values \
+         -f charts/kube-prom-stack-values.yaml \
+         --namespace monitoring \
+         --kube-token ${{ secrets.K8S_TOKEN }} \
+         --kube-apiserver ${{ secrets.K8S_SERVER }}
 
       - name: Wait for backend rollout
         run: kubectl -n "${EKS_NAMESPACE}" rollout status deployment/${BACKEND_DEPLOY} --timeout=5m
